// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App page component should compile correctly when search is available 1`] = `
<app-root
  accessibilityLink={[Function String]}
  accountUrl={[Function String]}
  activatedRoute={[Function ActivatedRoute]}
  hasApiActivity$={[Function _Store]}
  headerNavItems={[Function Array]}
  homeUrl={[Function String]}
  logoutUrl={[Function String]}
  online={[Function Boolean]}
  router={[Function _Router]}
  store={[Function _Store]}
  titleService={[Function Object]}
  translate={[Function _TranslateService]}
>
  <cpp-application-layout>
    <pdk-provider
      style="--container-width: 1170px;"
    >
      <div
        class="js-enabled govuk-frontend-supported govuk-template--rebranded"
      >
        <pdk-skip-link
          target="main-content"
        >
          <a
            class="govuk-skip-link"
            href="javascript:void(0)"
          >
             Skip to main content 
          </a>
        </pdk-skip-link>
        <cpp-application-cookies-banner>
          <pdk-cookie-banner
            class="govuk-template--rebranded"
            heading="Cookies on Common Platform"
          >
            <div
              aria-label="Cookies on Common Platform"
              class="govuk-cookie-banner"
              data-nosnippet=""
              role="region"
            >
              <div
                class="govuk-width-container"
              >
                <pdk-grid
                  class="govuk-grid-row"
                  container=""
                >
                  <pdk-grid
                    class="govuk-grid-column-two-thirds"
                    two-thirds=""
                  >
                    <h2
                      class="govuk-cookie-banner__heading govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                       Cookies on Common Platform 
                    </h2>
                  </pdk-grid>
                </pdk-grid>
                <pdk-cookie-banner-content>
                  <pdk-grid
                    class="govuk-grid-row"
                    container=""
                  >
                    <pdk-grid
                      class="govuk-grid-column-two-thirds"
                      two-thirds=""
                    >
                      <div
                        class="pdk-cookie-banner__content"
                      >
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                          We use some essential cookies to make the application work.
                        </p>
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                           We’d like to set additional cookies to understand how you use Common Platform, remember your settings and improve your experience. 
                        </p>
                      </div>
                    </pdk-grid>
                  </pdk-grid>
                </pdk-cookie-banner-content>
                <pdk-button-group>
                  <div
                    class="govuk-button-group"
                  >
                    <button
                      class="govuk-button"
                      data-test-id="acceptCookies"
                      pdk-button=""
                    >
                       Accept additional cookies 
                    </button>
                    <button
                      class="govuk-button"
                      data-test-id="rejectCookies"
                      pdk-button=""
                    >
                       Reject additional cookies 
                    </button>
                    <a
                      class="govuk-link"
                      href="/cookies?referrer=http%3A%2F%2Flocalhost%2F"
                      pdk-link=""
                    >
                      View cookies
                    </a>
                  </div>
                </pdk-button-group>
              </div>
            </div>
          </pdk-cookie-banner>
        </cpp-application-cookies-banner>
        <pdk-header
          class="govuk-template--rebranded"
        >
          <header
            class="govuk-header govuk-header--full-width-border js-enabled"
            role="banner"
          >
            <div
              class="govuk-header__container govuk-width-container"
            >
              <div
                class="pdk-header__content"
              >
                <div
                  class="govuk-header__logo pdk_header__logo"
                >
                  <a
                    class="govuk-header__link govuk-header__link--homepage"
                    href="#"
                    pdk-header-title=""
                  >
                    <svg
                      aria-label="GOV.UK"
                      class="govuk-header__logotype"
                      fill="currentcolor"
                      focusable="false"
                      height="30"
                      role="img"
                      viewBox="0 0 324 60"
                      width="162"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        GOV.UK
                      </title>
                      <g>
                        <circle
                          cx="20"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="10.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="3.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <circle
                          cx="43.3"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="53.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="59.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <path
                          d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                        />
                      </g>
                      <circle
                        class="govuk-logo-dot"
                        cx="227"
                        cy="36"
                        r="7.3"
                      />
                      <path
                        d="M94.7,36.1c0,1.9.2,3.6.7,5.4.5,1.7,1.2,3.2,2.1,4.5.9,1.3,2.2,2.4,3.6,3.2,1.5.8,3.2,1.2,5.3,1.2s3.6-.3,4.9-.9c1.3-.6,2.3-1.4,3.1-2.3.8-.9,1.3-2,1.6-3,.3-1.1.5-2.1.5-3v-.4h-11v-6.6h19.5v24h-7.7v-5.4c-.5.8-1.2,1.6-2,2.3-.8.7-1.7,1.3-2.7,1.8-1,.5-2.1.9-3.3,1.2-1.2.3-2.5.4-3.8.4-3.2,0-6-.6-8.4-1.7-2.5-1.1-4.5-2.7-6.2-4.7-1.7-2-3-4.4-3.8-7.1-.9-2.7-1.3-5.6-1.3-8.7s.5-6,1.5-8.7,2.4-5.1,4.2-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.6-1.7,4,.2,5.9.7c1.8.5,3.5,1.1,5.1,2,1.5.9,2.9,1.9,4,3.2,1.2,1.2,2.1,2.6,2.8,4.1l-7.7,4.3c-.5-.9-1-1.8-1.6-2.6-.6-.8-1.3-1.5-2.2-2.1-.8-.6-1.7-1-2.8-1.4-1-.3-2.2-.5-3.5-.5-2,0-3.8.4-5.3,1.2s-2.7,1.9-3.6,3.2c-.9,1.3-1.7,2.8-2.1,4.6s-.7,3.5-.7,5.3v.3h0ZM152.9,13.7c3.2,0,6.1.6,8.7,1.7,2.6,1.2,4.7,2.7,6.5,4.7,1.8,2,3.1,4.4,4.1,7.1s1.4,5.6,1.4,8.7-.5,6-1.4,8.7c-.9,2.7-2.3,5.1-4.1,7.1s-4,3.6-6.5,4.7c-2.6,1.1-5.5,1.7-8.7,1.7s-6.1-.6-8.7-1.7c-2.6-1.1-4.7-2.7-6.5-4.7-1.8-2-3.1-4.4-4.1-7.1-.9-2.7-1.4-5.6-1.4-8.7s.5-6,1.4-8.7,2.3-5.1,4.1-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.7-1.7h0ZM152.9,50.4c1.9,0,3.6-.4,5-1.1,1.4-.7,2.7-1.7,3.6-3,1-1.3,1.7-2.8,2.2-4.5.5-1.7.8-3.6.8-5.7v-.2c0-2-.3-3.9-.8-5.7-.5-1.7-1.3-3.3-2.2-4.5-1-1.3-2.2-2.3-3.6-3-1.4-.7-3.1-1.1-5-1.1s-3.6.4-5,1.1c-1.5.7-2.7,1.7-3.6,3s-1.7,2.8-2.2,4.5c-.5,1.7-.8,3.6-.8,5.7v.2c0,2.1.3,4,.8,5.7.5,1.7,1.2,3.2,2.2,4.5,1,1.3,2.2,2.3,3.6,3,1.5.7,3.1,1.1,5,1.1ZM189.1,58l-12.3-44h9.8l8.4,32.9h.3l8.2-32.9h9.7l-12.3,44M262.9,50.4c1.3,0,2.5-.2,3.6-.6,1.1-.4,2-.9,2.8-1.7.8-.8,1.4-1.7,1.9-2.9.5-1.2.7-2.5.7-4.1V14h8.6v28.5c0,2.4-.4,4.6-1.3,6.6-.9,2-2.1,3.6-3.7,5-1.6,1.4-3.4,2.4-5.6,3.2-2.2.7-4.5,1.1-7.1,1.1s-4.9-.4-7.1-1.1c-2.2-.7-4-1.8-5.6-3.2s-2.8-3-3.7-5c-.9-2-1.3-4.1-1.3-6.6V14h8.7v27.2c0,1.6.2,2.9.7,4.1.5,1.2,1.1,2.1,1.9,2.9.8.8,1.7,1.3,2.8,1.7s2.3.6,3.6.6h0ZM288.5,14h8.7v19.1l15.5-19.1h10.8l-15.1,17.6,16.1,26.4h-10.2l-11.5-19.7-5.6,6.3v13.5h-8.7"
                      />
                    </svg>
                    <span
                      class="govuk-header__product-name"
                    >
                      Common Platform
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </header>
          <div
            class="govuk-service-navigation"
          >
            <div
              class="govuk-width-container"
            >
              <div
                class="govuk-service-navigation__container"
              >
                <pdk-header-nav
                  class="govuk-service-navigation__container"
                >
                  <nav
                    aria-label="Top Level Navigation"
                    class="govuk-service-navigation__wrapper"
                  >
                    <button
                      aria-controls="navigation"
                      aria-expanded="false"
                      aria-label="Show or hide Top Level Navigation"
                      class="govuk-service-navigation__toggle"
                      type="button"
                    >
                       Menu 
                    </button>
                  </nav>
                </pdk-header-nav>
              </div>
            </div>
          </div>
        </pdk-header>
        <pdk-container
          class="govuk-width-container"
          style="display: block;"
        >
          <pdk-phase-banner>
            <p
              class="govuk-phase-banner__content"
            >
              <strong
                class="govuk-tag govuk-phase-banner__content__tag"
              >
                beta
              </strong>
              <span
                class="govuk-phase-banner__text"
              >
                This is a new service
              </span>
            </p>
          </pdk-phase-banner>
        </pdk-container>
        <pdk-main
          class="govuk-body-m"
          contentid="main-content"
          pdk-typography="body"
        >
          <main
            class="govuk-main-wrapper govuk-!-margin-bottom-9 govuk-width-container"
            id="main-content"
            pdk-container=""
            pdk-margin-bottom="9"
            style="display: block;"
            tabindex="-1"
          >
            <section>
              <router-outlet />
            </section>
          </main>
        </pdk-main>
        <pdk-footer
          class="govuk-template--rebranded"
        >
          <footer
            class="govuk-footer"
          >
            <div
              class="govuk-width-container"
            >
              <pdk-footer-meta>
                <svg
                  class="govuk-footer__crown"
                  fill="currentcolor"
                  focusable="false"
                  height="30"
                  role="presentation"
                  viewBox="0 0 64 60"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <circle
                      cx="20"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="10.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="3.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <circle
                      cx="43.3"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="53.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="59.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <path
                      d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                    />
                  </g>
                </svg>
                <div
                  class="govuk-footer__meta"
                >
                  <div
                    class="pdk-footer__meta-item govuk-footer__meta-item govuk-footer__meta-item--grow"
                  >
                    <h2
                      class="govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                      Help desk
                    </h2>
                    <div>
                      HMCTS DTS IT Service Desk
                    </div>
                    <dl>
                      <dt>
                        Telephone
                      </dt>
                      <dd>
                        0203 989 6060
                      </dd>
                      <dd>
                         Monday to Friday, 8am to 8pm and Saturday, 8am to 2pm (excluding public holidays) 
                      </dd>
                    </dl>
                    <dl
                      class="govuk-!-margin-bottom-0"
                      pdk-margin-bottom="0"
                    >
                      <dt>
                        Email
                      </dt>
                      <dd>
                        <a
                          class="govuk-footer__link"
                          href="mailto:CJSCP-ServiceDesk@hmcts.net?Subject=General%20enquiry"
                          pdk-footer-link=""
                        >
                           CJSCP-ServiceDesk@hmcts.net 
                        </a>
                      </dd>
                    </dl>
                  </div>
                  <div
                    class="govuk-footer__meta-item"
                  >
                    <a
                      class="govuk-footer__link govuk-footer__copyright-logo"
                      href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
                    >
                       © Crown copyright 
                    </a>
                  </div>
                </div>
              </pdk-footer-meta>
              <pdk-footer-list>
                <hr
                  class="govuk-footer__section-break"
                />
                <div
                  class="govuk-footer__inline-list"
                  role="list"
                >
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/terms-and-conditions"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Terms and conditions
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/cookies"
                        pdk-footer-link=""
                      >
                        Cookies
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="http://accessibility-url/accessibility"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Accessibility
                      </a>
                    </div>
                  </pdk-footer-list-item>
                </div>
              </pdk-footer-list>
            </div>
          </footer>
        </pdk-footer>
      </div>
    </pdk-provider>
  </cpp-application-layout>
</app-root>
`;

exports[`App page component should compile correctly with all header urls 1`] = `
<app-root
  accessibilityLink={[Function String]}
  accountUrl={[Function String]}
  activatedRoute={[Function ActivatedRoute]}
  hasApiActivity$={[Function _Store]}
  headerNavItems={[Function Array]}
  homeUrl={[Function String]}
  logoutUrl={[Function String]}
  online={[Function Boolean]}
  router={[Function _Router]}
  store={[Function _Store]}
  titleService={[Function Object]}
  translate={[Function _TranslateService]}
>
  <cpp-application-layout>
    <pdk-provider
      style="--container-width: 1170px;"
    >
      <div
        class="js-enabled govuk-frontend-supported govuk-template--rebranded"
      >
        <pdk-skip-link
          target="main-content"
        >
          <a
            class="govuk-skip-link"
            href="javascript:void(0)"
          >
             Skip to main content 
          </a>
        </pdk-skip-link>
        <cpp-application-cookies-banner>
          <pdk-cookie-banner
            class="govuk-template--rebranded"
            heading="Cookies on Common Platform"
          >
            <div
              aria-label="Cookies on Common Platform"
              class="govuk-cookie-banner"
              data-nosnippet=""
              role="region"
            >
              <div
                class="govuk-width-container"
              >
                <pdk-grid
                  class="govuk-grid-row"
                  container=""
                >
                  <pdk-grid
                    class="govuk-grid-column-two-thirds"
                    two-thirds=""
                  >
                    <h2
                      class="govuk-cookie-banner__heading govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                       Cookies on Common Platform 
                    </h2>
                  </pdk-grid>
                </pdk-grid>
                <pdk-cookie-banner-content>
                  <pdk-grid
                    class="govuk-grid-row"
                    container=""
                  >
                    <pdk-grid
                      class="govuk-grid-column-two-thirds"
                      two-thirds=""
                    >
                      <div
                        class="pdk-cookie-banner__content"
                      >
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                          We use some essential cookies to make the application work.
                        </p>
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                           We’d like to set additional cookies to understand how you use Common Platform, remember your settings and improve your experience. 
                        </p>
                      </div>
                    </pdk-grid>
                  </pdk-grid>
                </pdk-cookie-banner-content>
                <pdk-button-group>
                  <div
                    class="govuk-button-group"
                  >
                    <button
                      class="govuk-button"
                      data-test-id="acceptCookies"
                      pdk-button=""
                    >
                       Accept additional cookies 
                    </button>
                    <button
                      class="govuk-button"
                      data-test-id="rejectCookies"
                      pdk-button=""
                    >
                       Reject additional cookies 
                    </button>
                    <a
                      class="govuk-link"
                      href="/cookies?referrer=http%3A%2F%2Flocalhost%2F"
                      pdk-link=""
                    >
                      View cookies
                    </a>
                  </div>
                </pdk-button-group>
              </div>
            </div>
          </pdk-cookie-banner>
        </cpp-application-cookies-banner>
        <pdk-header
          class="govuk-template--rebranded"
        >
          <header
            class="govuk-header govuk-header--full-width-border js-enabled"
            role="banner"
          >
            <div
              class="govuk-header__container govuk-width-container"
            >
              <div
                class="pdk-header__content"
              >
                <div
                  class="govuk-header__logo pdk_header__logo"
                >
                  <a
                    class="govuk-header__link govuk-header__link--homepage"
                    href="#"
                    pdk-header-title=""
                  >
                    <svg
                      aria-label="GOV.UK"
                      class="govuk-header__logotype"
                      fill="currentcolor"
                      focusable="false"
                      height="30"
                      role="img"
                      viewBox="0 0 324 60"
                      width="162"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        GOV.UK
                      </title>
                      <g>
                        <circle
                          cx="20"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="10.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="3.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <circle
                          cx="43.3"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="53.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="59.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <path
                          d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                        />
                      </g>
                      <circle
                        class="govuk-logo-dot"
                        cx="227"
                        cy="36"
                        r="7.3"
                      />
                      <path
                        d="M94.7,36.1c0,1.9.2,3.6.7,5.4.5,1.7,1.2,3.2,2.1,4.5.9,1.3,2.2,2.4,3.6,3.2,1.5.8,3.2,1.2,5.3,1.2s3.6-.3,4.9-.9c1.3-.6,2.3-1.4,3.1-2.3.8-.9,1.3-2,1.6-3,.3-1.1.5-2.1.5-3v-.4h-11v-6.6h19.5v24h-7.7v-5.4c-.5.8-1.2,1.6-2,2.3-.8.7-1.7,1.3-2.7,1.8-1,.5-2.1.9-3.3,1.2-1.2.3-2.5.4-3.8.4-3.2,0-6-.6-8.4-1.7-2.5-1.1-4.5-2.7-6.2-4.7-1.7-2-3-4.4-3.8-7.1-.9-2.7-1.3-5.6-1.3-8.7s.5-6,1.5-8.7,2.4-5.1,4.2-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.6-1.7,4,.2,5.9.7c1.8.5,3.5,1.1,5.1,2,1.5.9,2.9,1.9,4,3.2,1.2,1.2,2.1,2.6,2.8,4.1l-7.7,4.3c-.5-.9-1-1.8-1.6-2.6-.6-.8-1.3-1.5-2.2-2.1-.8-.6-1.7-1-2.8-1.4-1-.3-2.2-.5-3.5-.5-2,0-3.8.4-5.3,1.2s-2.7,1.9-3.6,3.2c-.9,1.3-1.7,2.8-2.1,4.6s-.7,3.5-.7,5.3v.3h0ZM152.9,13.7c3.2,0,6.1.6,8.7,1.7,2.6,1.2,4.7,2.7,6.5,4.7,1.8,2,3.1,4.4,4.1,7.1s1.4,5.6,1.4,8.7-.5,6-1.4,8.7c-.9,2.7-2.3,5.1-4.1,7.1s-4,3.6-6.5,4.7c-2.6,1.1-5.5,1.7-8.7,1.7s-6.1-.6-8.7-1.7c-2.6-1.1-4.7-2.7-6.5-4.7-1.8-2-3.1-4.4-4.1-7.1-.9-2.7-1.4-5.6-1.4-8.7s.5-6,1.4-8.7,2.3-5.1,4.1-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.7-1.7h0ZM152.9,50.4c1.9,0,3.6-.4,5-1.1,1.4-.7,2.7-1.7,3.6-3,1-1.3,1.7-2.8,2.2-4.5.5-1.7.8-3.6.8-5.7v-.2c0-2-.3-3.9-.8-5.7-.5-1.7-1.3-3.3-2.2-4.5-1-1.3-2.2-2.3-3.6-3-1.4-.7-3.1-1.1-5-1.1s-3.6.4-5,1.1c-1.5.7-2.7,1.7-3.6,3s-1.7,2.8-2.2,4.5c-.5,1.7-.8,3.6-.8,5.7v.2c0,2.1.3,4,.8,5.7.5,1.7,1.2,3.2,2.2,4.5,1,1.3,2.2,2.3,3.6,3,1.5.7,3.1,1.1,5,1.1ZM189.1,58l-12.3-44h9.8l8.4,32.9h.3l8.2-32.9h9.7l-12.3,44M262.9,50.4c1.3,0,2.5-.2,3.6-.6,1.1-.4,2-.9,2.8-1.7.8-.8,1.4-1.7,1.9-2.9.5-1.2.7-2.5.7-4.1V14h8.6v28.5c0,2.4-.4,4.6-1.3,6.6-.9,2-2.1,3.6-3.7,5-1.6,1.4-3.4,2.4-5.6,3.2-2.2.7-4.5,1.1-7.1,1.1s-4.9-.4-7.1-1.1c-2.2-.7-4-1.8-5.6-3.2s-2.8-3-3.7-5c-.9-2-1.3-4.1-1.3-6.6V14h8.7v27.2c0,1.6.2,2.9.7,4.1.5,1.2,1.1,2.1,1.9,2.9.8.8,1.7,1.3,2.8,1.7s2.3.6,3.6.6h0ZM288.5,14h8.7v19.1l15.5-19.1h10.8l-15.1,17.6,16.1,26.4h-10.2l-11.5-19.7-5.6,6.3v13.5h-8.7"
                      />
                    </svg>
                    <span
                      class="govuk-header__product-name"
                    >
                      Common Platform
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </header>
          <div
            class="govuk-service-navigation"
          >
            <div
              class="govuk-width-container"
            >
              <div
                class="govuk-service-navigation__container"
              >
                <pdk-header-nav
                  class="govuk-service-navigation__container"
                >
                  <nav
                    aria-label="Top Level Navigation"
                    class="govuk-service-navigation__wrapper"
                  >
                    <button
                      aria-controls="navigation"
                      aria-expanded="false"
                      aria-label="Show or hide Top Level Navigation"
                      class="govuk-service-navigation__toggle"
                      type="button"
                    >
                       Menu 
                    </button>
                  </nav>
                </pdk-header-nav>
              </div>
            </div>
          </div>
        </pdk-header>
        <pdk-container
          class="govuk-width-container"
          style="display: block;"
        >
          <pdk-phase-banner>
            <p
              class="govuk-phase-banner__content"
            >
              <strong
                class="govuk-tag govuk-phase-banner__content__tag"
              >
                beta
              </strong>
              <span
                class="govuk-phase-banner__text"
              >
                This is a new service
              </span>
            </p>
          </pdk-phase-banner>
        </pdk-container>
        <pdk-main
          class="govuk-body-m"
          contentid="main-content"
          pdk-typography="body"
        >
          <main
            class="govuk-main-wrapper govuk-!-margin-bottom-9 govuk-width-container"
            id="main-content"
            pdk-container=""
            pdk-margin-bottom="9"
            style="display: block;"
            tabindex="-1"
          >
            <section>
              <router-outlet />
            </section>
          </main>
        </pdk-main>
        <pdk-footer
          class="govuk-template--rebranded"
        >
          <footer
            class="govuk-footer"
          >
            <div
              class="govuk-width-container"
            >
              <pdk-footer-meta>
                <svg
                  class="govuk-footer__crown"
                  fill="currentcolor"
                  focusable="false"
                  height="30"
                  role="presentation"
                  viewBox="0 0 64 60"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <circle
                      cx="20"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="10.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="3.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <circle
                      cx="43.3"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="53.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="59.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <path
                      d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                    />
                  </g>
                </svg>
                <div
                  class="govuk-footer__meta"
                >
                  <div
                    class="pdk-footer__meta-item govuk-footer__meta-item govuk-footer__meta-item--grow"
                  >
                    <h2
                      class="govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                      Help desk
                    </h2>
                    <div>
                      HMCTS DTS IT Service Desk
                    </div>
                    <dl>
                      <dt>
                        Telephone
                      </dt>
                      <dd>
                        0203 989 6060
                      </dd>
                      <dd>
                         Monday to Friday, 8am to 8pm and Saturday, 8am to 2pm (excluding public holidays) 
                      </dd>
                    </dl>
                    <dl
                      class="govuk-!-margin-bottom-0"
                      pdk-margin-bottom="0"
                    >
                      <dt>
                        Email
                      </dt>
                      <dd>
                        <a
                          class="govuk-footer__link"
                          href="mailto:CJSCP-ServiceDesk@hmcts.net?Subject=General%20enquiry"
                          pdk-footer-link=""
                        >
                           CJSCP-ServiceDesk@hmcts.net 
                        </a>
                      </dd>
                    </dl>
                  </div>
                  <div
                    class="govuk-footer__meta-item"
                  >
                    <a
                      class="govuk-footer__link govuk-footer__copyright-logo"
                      href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
                    >
                       © Crown copyright 
                    </a>
                  </div>
                </div>
              </pdk-footer-meta>
              <pdk-footer-list>
                <hr
                  class="govuk-footer__section-break"
                />
                <div
                  class="govuk-footer__inline-list"
                  role="list"
                >
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/terms-and-conditions"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Terms and conditions
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/cookies"
                        pdk-footer-link=""
                      >
                        Cookies
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="http://accessibility-url/accessibility"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Accessibility
                      </a>
                    </div>
                  </pdk-footer-list-item>
                </div>
              </pdk-footer-list>
            </div>
          </footer>
        </pdk-footer>
      </div>
    </pdk-provider>
  </cpp-application-layout>
</app-root>
`;

exports[`App page component should not include account link when accountUrl is not available 1`] = `
<app-root
  accessibilityLink={[Function String]}
  accountUrl=""
  activatedRoute={[Function ActivatedRoute]}
  hasApiActivity$={[Function _Store]}
  headerNavItems={[Function Array]}
  homeUrl={[Function String]}
  logoutUrl={[Function String]}
  online={[Function Boolean]}
  router={[Function _Router]}
  store={[Function _Store]}
  titleService={[Function Object]}
  translate={[Function _TranslateService]}
>
  <cpp-application-layout>
    <pdk-provider
      style="--container-width: 1170px;"
    >
      <div
        class="js-enabled govuk-frontend-supported govuk-template--rebranded"
      >
        <pdk-skip-link
          target="main-content"
        >
          <a
            class="govuk-skip-link"
            href="javascript:void(0)"
          >
             Skip to main content 
          </a>
        </pdk-skip-link>
        <cpp-application-cookies-banner>
          <pdk-cookie-banner
            class="govuk-template--rebranded"
            heading="Cookies on Common Platform"
          >
            <div
              aria-label="Cookies on Common Platform"
              class="govuk-cookie-banner"
              data-nosnippet=""
              role="region"
            >
              <div
                class="govuk-width-container"
              >
                <pdk-grid
                  class="govuk-grid-row"
                  container=""
                >
                  <pdk-grid
                    class="govuk-grid-column-two-thirds"
                    two-thirds=""
                  >
                    <h2
                      class="govuk-cookie-banner__heading govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                       Cookies on Common Platform 
                    </h2>
                  </pdk-grid>
                </pdk-grid>
                <pdk-cookie-banner-content>
                  <pdk-grid
                    class="govuk-grid-row"
                    container=""
                  >
                    <pdk-grid
                      class="govuk-grid-column-two-thirds"
                      two-thirds=""
                    >
                      <div
                        class="pdk-cookie-banner__content"
                      >
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                          We use some essential cookies to make the application work.
                        </p>
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                           We’d like to set additional cookies to understand how you use Common Platform, remember your settings and improve your experience. 
                        </p>
                      </div>
                    </pdk-grid>
                  </pdk-grid>
                </pdk-cookie-banner-content>
                <pdk-button-group>
                  <div
                    class="govuk-button-group"
                  >
                    <button
                      class="govuk-button"
                      data-test-id="acceptCookies"
                      pdk-button=""
                    >
                       Accept additional cookies 
                    </button>
                    <button
                      class="govuk-button"
                      data-test-id="rejectCookies"
                      pdk-button=""
                    >
                       Reject additional cookies 
                    </button>
                    <a
                      class="govuk-link"
                      href="/cookies?referrer=http%3A%2F%2Flocalhost%2F"
                      pdk-link=""
                    >
                      View cookies
                    </a>
                  </div>
                </pdk-button-group>
              </div>
            </div>
          </pdk-cookie-banner>
        </cpp-application-cookies-banner>
        <pdk-header
          class="govuk-template--rebranded"
        >
          <header
            class="govuk-header govuk-header--full-width-border js-enabled"
            role="banner"
          >
            <div
              class="govuk-header__container govuk-width-container"
            >
              <div
                class="pdk-header__content"
              >
                <div
                  class="govuk-header__logo pdk_header__logo"
                >
                  <a
                    class="govuk-header__link govuk-header__link--homepage"
                    href="#"
                    pdk-header-title=""
                  >
                    <svg
                      aria-label="GOV.UK"
                      class="govuk-header__logotype"
                      fill="currentcolor"
                      focusable="false"
                      height="30"
                      role="img"
                      viewBox="0 0 324 60"
                      width="162"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        GOV.UK
                      </title>
                      <g>
                        <circle
                          cx="20"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="10.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="3.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <circle
                          cx="43.3"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="53.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="59.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <path
                          d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                        />
                      </g>
                      <circle
                        class="govuk-logo-dot"
                        cx="227"
                        cy="36"
                        r="7.3"
                      />
                      <path
                        d="M94.7,36.1c0,1.9.2,3.6.7,5.4.5,1.7,1.2,3.2,2.1,4.5.9,1.3,2.2,2.4,3.6,3.2,1.5.8,3.2,1.2,5.3,1.2s3.6-.3,4.9-.9c1.3-.6,2.3-1.4,3.1-2.3.8-.9,1.3-2,1.6-3,.3-1.1.5-2.1.5-3v-.4h-11v-6.6h19.5v24h-7.7v-5.4c-.5.8-1.2,1.6-2,2.3-.8.7-1.7,1.3-2.7,1.8-1,.5-2.1.9-3.3,1.2-1.2.3-2.5.4-3.8.4-3.2,0-6-.6-8.4-1.7-2.5-1.1-4.5-2.7-6.2-4.7-1.7-2-3-4.4-3.8-7.1-.9-2.7-1.3-5.6-1.3-8.7s.5-6,1.5-8.7,2.4-5.1,4.2-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.6-1.7,4,.2,5.9.7c1.8.5,3.5,1.1,5.1,2,1.5.9,2.9,1.9,4,3.2,1.2,1.2,2.1,2.6,2.8,4.1l-7.7,4.3c-.5-.9-1-1.8-1.6-2.6-.6-.8-1.3-1.5-2.2-2.1-.8-.6-1.7-1-2.8-1.4-1-.3-2.2-.5-3.5-.5-2,0-3.8.4-5.3,1.2s-2.7,1.9-3.6,3.2c-.9,1.3-1.7,2.8-2.1,4.6s-.7,3.5-.7,5.3v.3h0ZM152.9,13.7c3.2,0,6.1.6,8.7,1.7,2.6,1.2,4.7,2.7,6.5,4.7,1.8,2,3.1,4.4,4.1,7.1s1.4,5.6,1.4,8.7-.5,6-1.4,8.7c-.9,2.7-2.3,5.1-4.1,7.1s-4,3.6-6.5,4.7c-2.6,1.1-5.5,1.7-8.7,1.7s-6.1-.6-8.7-1.7c-2.6-1.1-4.7-2.7-6.5-4.7-1.8-2-3.1-4.4-4.1-7.1-.9-2.7-1.4-5.6-1.4-8.7s.5-6,1.4-8.7,2.3-5.1,4.1-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.7-1.7h0ZM152.9,50.4c1.9,0,3.6-.4,5-1.1,1.4-.7,2.7-1.7,3.6-3,1-1.3,1.7-2.8,2.2-4.5.5-1.7.8-3.6.8-5.7v-.2c0-2-.3-3.9-.8-5.7-.5-1.7-1.3-3.3-2.2-4.5-1-1.3-2.2-2.3-3.6-3-1.4-.7-3.1-1.1-5-1.1s-3.6.4-5,1.1c-1.5.7-2.7,1.7-3.6,3s-1.7,2.8-2.2,4.5c-.5,1.7-.8,3.6-.8,5.7v.2c0,2.1.3,4,.8,5.7.5,1.7,1.2,3.2,2.2,4.5,1,1.3,2.2,2.3,3.6,3,1.5.7,3.1,1.1,5,1.1ZM189.1,58l-12.3-44h9.8l8.4,32.9h.3l8.2-32.9h9.7l-12.3,44M262.9,50.4c1.3,0,2.5-.2,3.6-.6,1.1-.4,2-.9,2.8-1.7.8-.8,1.4-1.7,1.9-2.9.5-1.2.7-2.5.7-4.1V14h8.6v28.5c0,2.4-.4,4.6-1.3,6.6-.9,2-2.1,3.6-3.7,5-1.6,1.4-3.4,2.4-5.6,3.2-2.2.7-4.5,1.1-7.1,1.1s-4.9-.4-7.1-1.1c-2.2-.7-4-1.8-5.6-3.2s-2.8-3-3.7-5c-.9-2-1.3-4.1-1.3-6.6V14h8.7v27.2c0,1.6.2,2.9.7,4.1.5,1.2,1.1,2.1,1.9,2.9.8.8,1.7,1.3,2.8,1.7s2.3.6,3.6.6h0ZM288.5,14h8.7v19.1l15.5-19.1h10.8l-15.1,17.6,16.1,26.4h-10.2l-11.5-19.7-5.6,6.3v13.5h-8.7"
                      />
                    </svg>
                    <span
                      class="govuk-header__product-name"
                    >
                      Common Platform
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </header>
          <div
            class="govuk-service-navigation"
          >
            <div
              class="govuk-width-container"
            >
              <div
                class="govuk-service-navigation__container"
              >
                <pdk-header-nav
                  class="govuk-service-navigation__container"
                >
                  <nav
                    aria-label="Top Level Navigation"
                    class="govuk-service-navigation__wrapper"
                  >
                    <button
                      aria-controls="navigation"
                      aria-expanded="false"
                      aria-label="Show or hide Top Level Navigation"
                      class="govuk-service-navigation__toggle"
                      type="button"
                    >
                       Menu 
                    </button>
                  </nav>
                </pdk-header-nav>
              </div>
            </div>
          </div>
        </pdk-header>
        <pdk-container
          class="govuk-width-container"
          style="display: block;"
        >
          <pdk-phase-banner>
            <p
              class="govuk-phase-banner__content"
            >
              <strong
                class="govuk-tag govuk-phase-banner__content__tag"
              >
                beta
              </strong>
              <span
                class="govuk-phase-banner__text"
              >
                This is a new service
              </span>
            </p>
          </pdk-phase-banner>
        </pdk-container>
        <pdk-main
          class="govuk-body-m"
          contentid="main-content"
          pdk-typography="body"
        >
          <main
            class="govuk-main-wrapper govuk-!-margin-bottom-9 govuk-width-container"
            id="main-content"
            pdk-container=""
            pdk-margin-bottom="9"
            style="display: block;"
            tabindex="-1"
          >
            <section>
              <router-outlet />
            </section>
          </main>
        </pdk-main>
        <pdk-footer
          class="govuk-template--rebranded"
        >
          <footer
            class="govuk-footer"
          >
            <div
              class="govuk-width-container"
            >
              <pdk-footer-meta>
                <svg
                  class="govuk-footer__crown"
                  fill="currentcolor"
                  focusable="false"
                  height="30"
                  role="presentation"
                  viewBox="0 0 64 60"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <circle
                      cx="20"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="10.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="3.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <circle
                      cx="43.3"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="53.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="59.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <path
                      d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                    />
                  </g>
                </svg>
                <div
                  class="govuk-footer__meta"
                >
                  <div
                    class="pdk-footer__meta-item govuk-footer__meta-item govuk-footer__meta-item--grow"
                  >
                    <h2
                      class="govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                      Help desk
                    </h2>
                    <div>
                      HMCTS DTS IT Service Desk
                    </div>
                    <dl>
                      <dt>
                        Telephone
                      </dt>
                      <dd>
                        0203 989 6060
                      </dd>
                      <dd>
                         Monday to Friday, 8am to 8pm and Saturday, 8am to 2pm (excluding public holidays) 
                      </dd>
                    </dl>
                    <dl
                      class="govuk-!-margin-bottom-0"
                      pdk-margin-bottom="0"
                    >
                      <dt>
                        Email
                      </dt>
                      <dd>
                        <a
                          class="govuk-footer__link"
                          href="mailto:CJSCP-ServiceDesk@hmcts.net?Subject=General%20enquiry"
                          pdk-footer-link=""
                        >
                           CJSCP-ServiceDesk@hmcts.net 
                        </a>
                      </dd>
                    </dl>
                  </div>
                  <div
                    class="govuk-footer__meta-item"
                  >
                    <a
                      class="govuk-footer__link govuk-footer__copyright-logo"
                      href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
                    >
                       © Crown copyright 
                    </a>
                  </div>
                </div>
              </pdk-footer-meta>
              <pdk-footer-list>
                <hr
                  class="govuk-footer__section-break"
                />
                <div
                  class="govuk-footer__inline-list"
                  role="list"
                >
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/terms-and-conditions"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Terms and conditions
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/cookies"
                        pdk-footer-link=""
                      >
                        Cookies
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="http://accessibility-url/accessibility"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Accessibility
                      </a>
                    </div>
                  </pdk-footer-list-item>
                </div>
              </pdk-footer-list>
            </div>
          </footer>
        </pdk-footer>
      </div>
    </pdk-provider>
  </cpp-application-layout>
</app-root>
`;

exports[`App page component should not include logout link when logoutUrl is not available 1`] = `
<app-root
  accessibilityLink={[Function String]}
  accountUrl={[Function String]}
  activatedRoute={[Function ActivatedRoute]}
  hasApiActivity$={[Function _Store]}
  headerNavItems={[Function Array]}
  homeUrl={[Function String]}
  logoutUrl=""
  online={[Function Boolean]}
  router={[Function _Router]}
  store={[Function _Store]}
  titleService={[Function Object]}
  translate={[Function _TranslateService]}
>
  <cpp-application-layout>
    <pdk-provider
      style="--container-width: 1170px;"
    >
      <div
        class="js-enabled govuk-frontend-supported govuk-template--rebranded"
      >
        <pdk-skip-link
          target="main-content"
        >
          <a
            class="govuk-skip-link"
            href="javascript:void(0)"
          >
             Skip to main content 
          </a>
        </pdk-skip-link>
        <cpp-application-cookies-banner>
          <pdk-cookie-banner
            class="govuk-template--rebranded"
            heading="Cookies on Common Platform"
          >
            <div
              aria-label="Cookies on Common Platform"
              class="govuk-cookie-banner"
              data-nosnippet=""
              role="region"
            >
              <div
                class="govuk-width-container"
              >
                <pdk-grid
                  class="govuk-grid-row"
                  container=""
                >
                  <pdk-grid
                    class="govuk-grid-column-two-thirds"
                    two-thirds=""
                  >
                    <h2
                      class="govuk-cookie-banner__heading govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                       Cookies on Common Platform 
                    </h2>
                  </pdk-grid>
                </pdk-grid>
                <pdk-cookie-banner-content>
                  <pdk-grid
                    class="govuk-grid-row"
                    container=""
                  >
                    <pdk-grid
                      class="govuk-grid-column-two-thirds"
                      two-thirds=""
                    >
                      <div
                        class="pdk-cookie-banner__content"
                      >
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                          We use some essential cookies to make the application work.
                        </p>
                        <p
                          class="govuk-body-m"
                          pdk-typography="body"
                        >
                           We’d like to set additional cookies to understand how you use Common Platform, remember your settings and improve your experience. 
                        </p>
                      </div>
                    </pdk-grid>
                  </pdk-grid>
                </pdk-cookie-banner-content>
                <pdk-button-group>
                  <div
                    class="govuk-button-group"
                  >
                    <button
                      class="govuk-button"
                      data-test-id="acceptCookies"
                      pdk-button=""
                    >
                       Accept additional cookies 
                    </button>
                    <button
                      class="govuk-button"
                      data-test-id="rejectCookies"
                      pdk-button=""
                    >
                       Reject additional cookies 
                    </button>
                    <a
                      class="govuk-link"
                      href="/cookies?referrer=http%3A%2F%2Flocalhost%2F"
                      pdk-link=""
                    >
                      View cookies
                    </a>
                  </div>
                </pdk-button-group>
              </div>
            </div>
          </pdk-cookie-banner>
        </cpp-application-cookies-banner>
        <pdk-header
          class="govuk-template--rebranded"
        >
          <header
            class="govuk-header govuk-header--full-width-border js-enabled"
            role="banner"
          >
            <div
              class="govuk-header__container govuk-width-container"
            >
              <div
                class="pdk-header__content"
              >
                <div
                  class="govuk-header__logo pdk_header__logo"
                >
                  <a
                    class="govuk-header__link govuk-header__link--homepage"
                    href="#"
                    pdk-header-title=""
                  >
                    <svg
                      aria-label="GOV.UK"
                      class="govuk-header__logotype"
                      fill="currentcolor"
                      focusable="false"
                      height="30"
                      role="img"
                      viewBox="0 0 324 60"
                      width="162"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        GOV.UK
                      </title>
                      <g>
                        <circle
                          cx="20"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="10.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="3.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <circle
                          cx="43.3"
                          cy="17.6"
                          r="3.7"
                        />
                        <circle
                          cx="53.2"
                          cy="23.5"
                          r="3.7"
                        />
                        <circle
                          cx="59.7"
                          cy="33.2"
                          r="3.7"
                        />
                        <circle
                          cx="31.7"
                          cy="30.6"
                          r="3.7"
                        />
                        <path
                          d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                        />
                      </g>
                      <circle
                        class="govuk-logo-dot"
                        cx="227"
                        cy="36"
                        r="7.3"
                      />
                      <path
                        d="M94.7,36.1c0,1.9.2,3.6.7,5.4.5,1.7,1.2,3.2,2.1,4.5.9,1.3,2.2,2.4,3.6,3.2,1.5.8,3.2,1.2,5.3,1.2s3.6-.3,4.9-.9c1.3-.6,2.3-1.4,3.1-2.3.8-.9,1.3-2,1.6-3,.3-1.1.5-2.1.5-3v-.4h-11v-6.6h19.5v24h-7.7v-5.4c-.5.8-1.2,1.6-2,2.3-.8.7-1.7,1.3-2.7,1.8-1,.5-2.1.9-3.3,1.2-1.2.3-2.5.4-3.8.4-3.2,0-6-.6-8.4-1.7-2.5-1.1-4.5-2.7-6.2-4.7-1.7-2-3-4.4-3.8-7.1-.9-2.7-1.3-5.6-1.3-8.7s.5-6,1.5-8.7,2.4-5.1,4.2-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.6-1.7,4,.2,5.9.7c1.8.5,3.5,1.1,5.1,2,1.5.9,2.9,1.9,4,3.2,1.2,1.2,2.1,2.6,2.8,4.1l-7.7,4.3c-.5-.9-1-1.8-1.6-2.6-.6-.8-1.3-1.5-2.2-2.1-.8-.6-1.7-1-2.8-1.4-1-.3-2.2-.5-3.5-.5-2,0-3.8.4-5.3,1.2s-2.7,1.9-3.6,3.2c-.9,1.3-1.7,2.8-2.1,4.6s-.7,3.5-.7,5.3v.3h0ZM152.9,13.7c3.2,0,6.1.6,8.7,1.7,2.6,1.2,4.7,2.7,6.5,4.7,1.8,2,3.1,4.4,4.1,7.1s1.4,5.6,1.4,8.7-.5,6-1.4,8.7c-.9,2.7-2.3,5.1-4.1,7.1s-4,3.6-6.5,4.7c-2.6,1.1-5.5,1.7-8.7,1.7s-6.1-.6-8.7-1.7c-2.6-1.1-4.7-2.7-6.5-4.7-1.8-2-3.1-4.4-4.1-7.1-.9-2.7-1.4-5.6-1.4-8.7s.5-6,1.4-8.7,2.3-5.1,4.1-7.1c1.8-2,4-3.6,6.5-4.7s5.4-1.7,8.7-1.7h0ZM152.9,50.4c1.9,0,3.6-.4,5-1.1,1.4-.7,2.7-1.7,3.6-3,1-1.3,1.7-2.8,2.2-4.5.5-1.7.8-3.6.8-5.7v-.2c0-2-.3-3.9-.8-5.7-.5-1.7-1.3-3.3-2.2-4.5-1-1.3-2.2-2.3-3.6-3-1.4-.7-3.1-1.1-5-1.1s-3.6.4-5,1.1c-1.5.7-2.7,1.7-3.6,3s-1.7,2.8-2.2,4.5c-.5,1.7-.8,3.6-.8,5.7v.2c0,2.1.3,4,.8,5.7.5,1.7,1.2,3.2,2.2,4.5,1,1.3,2.2,2.3,3.6,3,1.5.7,3.1,1.1,5,1.1ZM189.1,58l-12.3-44h9.8l8.4,32.9h.3l8.2-32.9h9.7l-12.3,44M262.9,50.4c1.3,0,2.5-.2,3.6-.6,1.1-.4,2-.9,2.8-1.7.8-.8,1.4-1.7,1.9-2.9.5-1.2.7-2.5.7-4.1V14h8.6v28.5c0,2.4-.4,4.6-1.3,6.6-.9,2-2.1,3.6-3.7,5-1.6,1.4-3.4,2.4-5.6,3.2-2.2.7-4.5,1.1-7.1,1.1s-4.9-.4-7.1-1.1c-2.2-.7-4-1.8-5.6-3.2s-2.8-3-3.7-5c-.9-2-1.3-4.1-1.3-6.6V14h8.7v27.2c0,1.6.2,2.9.7,4.1.5,1.2,1.1,2.1,1.9,2.9.8.8,1.7,1.3,2.8,1.7s2.3.6,3.6.6h0ZM288.5,14h8.7v19.1l15.5-19.1h10.8l-15.1,17.6,16.1,26.4h-10.2l-11.5-19.7-5.6,6.3v13.5h-8.7"
                      />
                    </svg>
                    <span
                      class="govuk-header__product-name"
                    >
                      Common Platform
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </header>
          <div
            class="govuk-service-navigation"
          >
            <div
              class="govuk-width-container"
            >
              <div
                class="govuk-service-navigation__container"
              >
                <pdk-header-nav
                  class="govuk-service-navigation__container"
                >
                  <nav
                    aria-label="Top Level Navigation"
                    class="govuk-service-navigation__wrapper"
                  >
                    <button
                      aria-controls="navigation"
                      aria-expanded="false"
                      aria-label="Show or hide Top Level Navigation"
                      class="govuk-service-navigation__toggle"
                      type="button"
                    >
                       Menu 
                    </button>
                  </nav>
                </pdk-header-nav>
              </div>
            </div>
          </div>
        </pdk-header>
        <pdk-container
          class="govuk-width-container"
          style="display: block;"
        >
          <pdk-phase-banner>
            <p
              class="govuk-phase-banner__content"
            >
              <strong
                class="govuk-tag govuk-phase-banner__content__tag"
              >
                beta
              </strong>
              <span
                class="govuk-phase-banner__text"
              >
                This is a new service
              </span>
            </p>
          </pdk-phase-banner>
        </pdk-container>
        <pdk-main
          class="govuk-body-m"
          contentid="main-content"
          pdk-typography="body"
        >
          <main
            class="govuk-main-wrapper govuk-!-margin-bottom-9 govuk-width-container"
            id="main-content"
            pdk-container=""
            pdk-margin-bottom="9"
            style="display: block;"
            tabindex="-1"
          >
            <section>
              <router-outlet />
            </section>
          </main>
        </pdk-main>
        <pdk-footer
          class="govuk-template--rebranded"
        >
          <footer
            class="govuk-footer"
          >
            <div
              class="govuk-width-container"
            >
              <pdk-footer-meta>
                <svg
                  class="govuk-footer__crown"
                  fill="currentcolor"
                  focusable="false"
                  height="30"
                  role="presentation"
                  viewBox="0 0 64 60"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <circle
                      cx="20"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="10.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="3.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <circle
                      cx="43.3"
                      cy="17.6"
                      r="3.7"
                    />
                    <circle
                      cx="53.2"
                      cy="23.5"
                      r="3.7"
                    />
                    <circle
                      cx="59.7"
                      cy="33.2"
                      r="3.7"
                    />
                    <circle
                      cx="31.7"
                      cy="30.6"
                      r="3.7"
                    />
                    <path
                      d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
                    />
                  </g>
                </svg>
                <div
                  class="govuk-footer__meta"
                >
                  <div
                    class="pdk-footer__meta-item govuk-footer__meta-item govuk-footer__meta-item--grow"
                  >
                    <h2
                      class="govuk-heading-m"
                      pdk-typography="heading-medium"
                    >
                      Help desk
                    </h2>
                    <div>
                      HMCTS DTS IT Service Desk
                    </div>
                    <dl>
                      <dt>
                        Telephone
                      </dt>
                      <dd>
                        0203 989 6060
                      </dd>
                      <dd>
                         Monday to Friday, 8am to 8pm and Saturday, 8am to 2pm (excluding public holidays) 
                      </dd>
                    </dl>
                    <dl
                      class="govuk-!-margin-bottom-0"
                      pdk-margin-bottom="0"
                    >
                      <dt>
                        Email
                      </dt>
                      <dd>
                        <a
                          class="govuk-footer__link"
                          href="mailto:CJSCP-ServiceDesk@hmcts.net?Subject=General%20enquiry"
                          pdk-footer-link=""
                        >
                           CJSCP-ServiceDesk@hmcts.net 
                        </a>
                      </dd>
                    </dl>
                  </div>
                  <div
                    class="govuk-footer__meta-item"
                  >
                    <a
                      class="govuk-footer__link govuk-footer__copyright-logo"
                      href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
                    >
                       © Crown copyright 
                    </a>
                  </div>
                </div>
              </pdk-footer-meta>
              <pdk-footer-list>
                <hr
                  class="govuk-footer__section-break"
                />
                <div
                  class="govuk-footer__inline-list"
                  role="list"
                >
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/terms-and-conditions"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Terms and conditions
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="/cookies"
                        pdk-footer-link=""
                      >
                        Cookies
                      </a>
                    </div>
                  </pdk-footer-list-item>
                  <pdk-footer-list-item
                    role="listitem"
                  >
                    <div
                      class="govuk-footer__inline-list-item"
                    >
                      <a
                        class="govuk-footer__link"
                        href="http://accessibility-url/accessibility"
                        pdk-footer-link=""
                        target="_blank"
                      >
                        Accessibility
                      </a>
                    </div>
                  </pdk-footer-list-item>
                </div>
              </pdk-footer-list>
            </div>
          </footer>
        </pdk-footer>
      </div>
    </pdk-provider>
  </cpp-application-layout>
</app-root>
`;
